[package]
name = "halo"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
ff = "0.13.0"
rand = "0.8.5"
secp256k1 = { version = "0.30.0", features = ["hashes"] }
halo2-base = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", features = [
    "halo2-axiom",
    "test-utils",
] }
halo2-ecc = { git = "https://github.com/axiom-crypto/halo2-lib.git", tag = "v0.4.1-git", features = [
    "halo2-axiom",
] }
blake2 = "0.10.6"
